# discord-rpc

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  binding.gyp  build.py  cmakebuild.bat  package.json
documentation/: hard-mode.md  rich-presence-guide.md  rpc-only.md
examples/button-clicker/: .gitignore
examples/button-clicker/Assets/: BuildHelper.cs  DiscordController.cs  DiscordRpc.cs  main.unity
examples/button-clicker/Assets/Editor/: BuildHelper.cs
examples/button-clicker/ProjectSettings/: ProjectSettings.asset
examples/electron-js-example/: index.html  main.js  renderer.js  style.css
examples/send-presence/: CMakeLists.txt  send-presence.c
examples/simple/: CMakeLists.txt  simple.c
examples/simpleSync/: CMakeLists.txt  simpleSync.c
examples/simplest/: CMakeLists.txt  simple.c  simple.cpp  simplest.c
examples/unrealstatus/: .gitignore  unrealstatus.uproject
examples/unrealstatus/Config/: DefaultEngine.ini  DefaultGame.ini
examples/unrealstatus/Content/: MainScreenBP.uasset  MousePlayerControllerBP.uasset  ShowTheUILevel.umap
examples/unrealstatus/Plugins/DiscordRpc/: DiscordRpc.uplugin
examples/unrealstatus/Plugins/DiscordRpc/Source/DiscordRpc/: DiscordRpc.Build.cs
examples/unrealstatus/Plugins/DiscordRpc/Source/DiscordRpc/Private/: DiscordRpc.cpp  DiscordRpcBlueprint.cpp
examples/unrealstatus/Plugins/DiscordRpc/Source/DiscordRpc/Public/: DiscordRpc.h
examples/unrealstatus/Plugins/DiscordRpcPlugin/: DiscordRpc.uplugin
examples/unrealstatus/Plugins/DiscordRpcPlugin/Source/DiscordRpc/: DiscordRpc.Build.cs
examples/unrealstatus/Plugins/DiscordRpcPlugin/Source/DiscordRpc/Private/: DiscordRpc.cpp
examples/unrealstatus/Plugins/discordrpc/: DiscordRpc.uplugin  discordrpc.uplugin
examples/unrealstatus/Plugins/discordrpc/Source/DiscordRpc/: DiscordRpc.Build.cs
examples/unrealstatus/Plugins/discordrpc/Source/DiscordRpc/Private/: DiscordRpc.cpp  DiscordRpcBlueprint.cpp
examples/unrealstatus/Plugins/discordrpc/Source/DiscordRpc/Public/: DiscordRpcBlueprint.h
examples/unrealstatus/Plugins/discordrpc/Source/discordrpc/: discordrpc.Build.cs
examples/unrealstatus/Plugins/discordrpc/Source/discordrpc/Private/: DiscordRpcBlueprint.cpp  discordrpc.cpp
examples/unrealstatus/Plugins/discordrpc/Source/discordrpc/Public/: DiscordRpcBlueprint.h  discordrpc.h
examples/unrealstatus/Source/unrealstatus/: unrealstatus.cpp  unrealstatusGameModeBase.cpp  unrealstatusGameModeBase.h
include/: discord-rpc.h  discord_rpc.h
js/: addon.cc  index.js
src/: CMakeLists.txt  backoff.h  connection.h  connection_unix.cpp  connection_win.cpp  connection_win_sync.cpp  discord-register.cpp  discord-register.h  discord-rpc-simple.cpp  discord-rpc.cpp  discord-rpc.h  discord_register.h  discord_register_linux.cpp  discord_register_osx.m  discord_register_win.cpp  discord_rpc.cpp  dllmain.cpp  msg_queue.h  rpc_connection.cpp  rpc_connection.h  serialization.cpp  serialization.h  simple.cpp  yolojson.h
test-rpc-server/: package.json  rpc-message.js  rpc-server.js  test-client.js
